--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,9 +31,14 @@
 
         padding: 5px;
         margin-right: 2%;
+        background-color: green;
+        color: azure;
+        border-bottom-left-radius: 5%;
+        background-size: 10%;
+        
       }
 
-
+      
       .form-loc {
 
         margin-top: 5px;
@@ -41,5 +46,19 @@
       }
 
       
+.parent{
+  overflow: auto;
+  width: 100%;
+}
 
+.gifs{
+  float: left;
+  width: 50%;
+}
+
+.search_form{
+  float: left;
+  width: 50%;
+  height: 400px;
+}
 
